// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content matches snapshot 1`] = `
Array [
  .emotion-0 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  margin: 0;
  position: absolute;
  left: 0;
  top: 0;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus {
  -webkit-clip: auto;
  clip: auto;
  height: auto;
  width: auto;
  z-index: 20;
}

<a
    className="emotion-0 emotion-1"
    href="#main-content"
    onClick={[Function]}
  >
    Skip to Content
  </a>,
  .emotion-40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-32 {
  background-color: white;
  overflow-x: hidden;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  width: 300px;
}

.emotion-0 {
  position: fixed;
  top: 10px;
  height: 40px;
  width: 40px;
  background: none;
  padding: 0;
  border: none;
  z-index: 1;
  outline: none;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  left: 240px;
}

.emotion-0 span {
  width: 100%;
  background: #000;
  padding-top: 10%;
  display: block;
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-0 span:nth-of-type(1) {
  -webkit-transform: rotateZ(45deg);
  -ms-transform: rotateZ(45deg);
  transform: rotateZ(45deg);
}

.emotion-0 span:nth-of-type(2) {
  opacity: 0;
}

.emotion-0 span:nth-of-type(3) {
  -webkit-transform: rotateZ(-45deg);
  -ms-transform: rotateZ(-45deg);
  transform: rotateZ(-45deg);
  margin-top: -20%;
}

.emotion-30 {
  position: fixed;
  left: 0;
  top: 0;
  bottom: 0;
  width: 300px;
  overflow-y: auto;
  font-size: 15px;
  padding: 10px;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

.emotion-30 ol {
  padding-inline-start: 10px;
}

.emotion-30 > * {
  -webkit-transition-property: visibility;
  transition-property: visibility;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  visibility: visible;
}

.emotion-2 {
  list-style: none;
}

.emotion-14 {
  list-style: none;
  overflow: visible;
  position: relative;
}

.emotion-14:before {
  font-weight: bold;
  content: '>';
  position: absolute;
  right: 100%;
}

.emotion-38 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 3rem;
  padding: 0 3rem 0 3rem;
  font-size: 18px;
  font-family: "Noto Sans";
}

.emotion-38 * {
  overflow: initial;
}

.emotion-34 {
  font-family: "Roboto Condensed",serif;
  font-size: 19px;
  line-height: 29px;
}

<div
    className="emotion-40 emotion-41"
  >
    <div
      className="emotion-32 emotion-33"
    >
      <button
        aria-label="Click to close the Table of Contents"
        className="emotion-0 emotion-1"
        onClick={[Function]}
        role="button"
      >
        <span />
        <span />
        <span />
      </button>
      <div
        className="emotion-30 emotion-31"
      >
        <nav>
          <ol>
            <li
              className="emotion-2 emotion-3"
            >
              <a
                href="#"
              >
                book details
              </a>
            </li>
          </ol>
        </nav>
        <div>
          <h2>
            Table of Contents
          </h2>
          <nav>
            <ol>
              <li
                className="emotion-2 emotion-3"
              >
                <a
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-text\\">Test Page 1</span>",
                    }
                  }
                  href="/books/book-slug-1/pages/test-page-1"
                  onClick={[Function]}
                />
              </li>
              <li
                className="emotion-2 emotion-3"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 1</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="emotion-2 emotion-3"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 2</span>",
                          }
                        }
                        href="/books/book-slug-1/pages/1-test-page-2"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="emotion-2 emotion-3"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 2</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="emotion-2 emotion-3"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 3</span>",
                          }
                        }
                        href="/books/book-slug-1/pages/1-test-page-3"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="emotion-2 emotion-3"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 3</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      aria-label="Current Page"
                      className="emotion-14 emotion-3"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
                          }
                        }
                        href="/books/book-slug-1/pages/1-test-page-4"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="emotion-2 emotion-3"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 4</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="emotion-2 emotion-3"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 5</span>",
                          }
                        }
                        href="/books/book-slug-1/pages/1-test-page-5"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="emotion-2 emotion-3"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 5</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="emotion-2 emotion-3"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 6</span>",
                          }
                        }
                        href="/books/book-slug-1/pages/1-test-page-6"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="emotion-2 emotion-3"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 6</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="emotion-2 emotion-3"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 7</span>",
                          }
                        }
                        href="/books/book-slug-1/pages/1-test-page-7"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
            </ol>
          </nav>
        </div>
      </div>
    </div>
    <div
      className="emotion-38 emotion-39"
      id="main-content"
      tabIndex={-1}
    >
      <div>
        <h1
          className="emotion-34 emotion-35"
        >
          Test Book 1
           / 
          Test Page 4
        </h1>
      </div>
      <div
        className="emotion-36 emotion-37"
      >
        <div
          data-type="chapter"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<div xmlns:m=\\"http://www.w3.org/1998/Math/MathML\\" xmlns:ns2=\\"urn:oasis:names:tc:opendocument:xmlns:xsl-fo-compatible:1.0\\" class=\\"introduction\\" data-cnxml-to-html-ver=\\"1.3.2\\" data-type=\\"page\\" id=\\"1d1fd537-77fb-4eac-8a8a-60bbaa747b6d\\">this is a test page</div>",
              }
            }
            data-type="page"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`content renders empty state 1`] = `
Array [
  .emotion-0 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  margin: 0;
  position: absolute;
  left: 0;
  top: 0;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:focus {
  -webkit-clip: auto;
  clip: auto;
  height: auto;
  width: auto;
  z-index: 20;
}

<a
    className="emotion-0 emotion-1"
    href="#main-content"
    onClick={[Function]}
  >
    Skip to Content
  </a>,
  .emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-6 {
  background-color: white;
  overflow-x: hidden;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  width: 300px;
}

.emotion-0 {
  position: fixed;
  top: 10px;
  height: 40px;
  width: 40px;
  background: none;
  padding: 0;
  border: none;
  z-index: 1;
  outline: none;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  left: 240px;
}

.emotion-0 span {
  width: 100%;
  background: #000;
  padding-top: 10%;
  display: block;
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-0 span:nth-of-type(1) {
  -webkit-transform: rotateZ(45deg);
  -ms-transform: rotateZ(45deg);
  transform: rotateZ(45deg);
}

.emotion-0 span:nth-of-type(2) {
  opacity: 0;
}

.emotion-0 span:nth-of-type(3) {
  -webkit-transform: rotateZ(-45deg);
  -ms-transform: rotateZ(-45deg);
  transform: rotateZ(-45deg);
  margin-top: -20%;
}

.emotion-4 {
  position: fixed;
  left: 0;
  top: 0;
  bottom: 0;
  width: 300px;
  overflow-y: auto;
  font-size: 15px;
  padding: 10px;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

.emotion-4 ol {
  padding-inline-start: 10px;
}

.emotion-4 > * {
  -webkit-transition-property: visibility;
  transition-property: visibility;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  visibility: visible;
}

.emotion-2 {
  list-style: none;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 3rem;
  padding: 0 3rem 0 3rem;
  font-size: 18px;
  font-family: "Noto Sans";
}

.emotion-10 * {
  overflow: initial;
}

<div
    className="emotion-12 emotion-13"
  >
    <div
      className="emotion-6 emotion-7"
    >
      <button
        aria-label="Click to close the Table of Contents"
        className="emotion-0 emotion-1"
        onClick={[Function]}
        role="button"
      >
        <span />
        <span />
        <span />
      </button>
      <div
        className="emotion-4 emotion-5"
      >
        <nav>
          <ol>
            <li
              className="emotion-2 emotion-3"
            >
              <a
                href="#"
              >
                book details
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <div
      className="emotion-10 emotion-11"
      id="main-content"
      tabIndex={-1}
    >
      <div />
      <div
        className="emotion-8 emotion-9"
      >
        <div
          data-type="chapter"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            data-type="page"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;
